fixed footer container on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -627,7 +627,7 @@ li {
 
 @media (width < 900px) {
     .footerSections {
-        width: 50%;
+        width: 60%;
     }
     .sectionTwoPhotoContainer {
         display: grid;
